<resources>
    <string name="app_name">MyPoll</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">Active Polls</string>
    <string name="title_section3">Poll Statistics</string>
    <string name="title_section4">Archived Polls</string>
    <string name="sample_quiz">MyPoll Quiz</string>
    <string name="sample_text">Text goes here</string>
    <string name="submitted_by">By</string>
    <string name="submit">SUBMIT</string>
    <string name="comment">Comment Here</string>
    <string name="view_results">VIEW RESULTS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="prompt">SELECT POLL</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From MasterClass: device successfully registered!</string>
    <string name="gcm_unregistered">From MasterClass: device successfully unregistered!</string>
    <string name="gcm_message">From MasterClass: you got message!</string>
    <string name="gcm_error">From MasterClass: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From MasterClass: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Masterclas Server.</string>
    <string name="server_registered">From MasterClass Server: successfully added device!</string>
    <string name="server_unregistered">From MasterClass Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on MasterClass Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on MasterClass Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="test_string">test string</string>

    <string-array name="drawer_icons">
        <item>@mipmap/ic_launcher</item>
        <item>@mipmap/ic_active_polls</item>
        <item>@mipmap/ic_poll_stats</item>
        <item>@mipmap/ic_archive_polls</item>
    </string-array>
</resources>
