<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:padding="10dp"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true" >

        <TextView
            android:id="@+id/pollQn3"
            android:layout_width="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_height="wrap_content"
            android:text="@string/sample_quiz"
            android:layout_centerHorizontal="true"
            android:textColor="@android:color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@+id/pollQn3"
            android:text="@string/comment"
            android:id="@+id/textView"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/txtcomment"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20dip"
            android:lines="3"

            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:hint="@string/sample_text" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/submitted_by"
            android:layout_below="@+id/txtcomment"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/black"
            android:id="@+id/tv_submitted_by" />
        <EditText
            android:id="@+id/txtby2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dip"
            android:paddingTop="5dip"
            android:lines="1"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_submitted_by"
            android:hint="@string/sample_text" />

        <Button
            android:id="@+id/btnpollsubmit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#20b392"
            android:text="@string/submit"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_below="@+id/txtby2"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/btnStats3"
            android:text="@string/view_results"
            android:textStyle="bold"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#305d7b"
            android:padding="10dp"
            android:textColor="@android:color/white"
            android:layout_below="@+id/btnpollsubmit"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />
    </RelativeLayout>

</RelativeLayout>